fixed the javascript

--- a/game1.html
+++ b/game1.html
@@ -1,11 +1,6 @@
 <html>
  <head><title>game</title>
-  <style type="text/css">
-   table, th, td {
-    border: 1px solid black;
-   }
-  </style>
-  <script type="text/javascript src="game.js"defer></script>
+  <script type="text/javascript" src="game.js"defer></script>
  </head>
  <body onload="load();">
   <table border="2">
